Validação do gerador de senhas

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
       "name": "CalculatorGUI",
       "request": "launch",
       "mainClass": "ui.CalculatorGUI",
+      "projectName": "Java_367b112e"
+    },
+    {
+      "type": "java",
+      "name": "CalculatorGUI",
+      "request": "launch",
+      "mainClass": "ui.CalculatorGUI",
       "projectName": "Trabalho-Matheus_e99c7dd5"
     },
     {
